--- a/style.css
+++ b/style.css
@@ -41,3 +41,174 @@ header .master_play{
 header .menu_side{
     font-size: 1rem;
 }
+header .menu_side h1{
+    font-size: 1.5rem;
+    margin: 15px 0 0 20px;
+    font-weight: 500;                                    
+}
+
+header .menu_side .playlist{
+  
+    margin: 40px 0 0 20px;                                  
+}
+header .menu_side .playlist h4{
+    font-size: 0.8rem;
+    font-weight: 400;
+    padding-bottom:10px ;
+    color: #4c5262;
+    transition: 0.3s linear;
+    display: flex;
+    align-items: center;
+
+
+                              
+}
+header .menu_side .playlist h4:hover{
+    color: #ffffff;
+                              
+}
+header .menu_side .playlist h4 span{
+    position: relative;
+    margin-right: 2.1rem;
+}
+header .menu_side .playlist h4 span::before{
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    border: 2px solid #4c5262;
+    border-radius: 50%;
+    top: -4px;
+    transition: .3s linear;
+
+}
+header .menu_side .playlist h4:hover span::before{
+    border: 2px solid #ffffff;
+
+}
+header .menu_side .playlist h4 .fa-music{
+   display: none;
+
+}
+header .menu_side .playlist .active{
+  color: #36e2ec;
+
+}
+header .menu_side .playlist .active span{
+  display: none;
+
+}
+header .menu_side .playlist .active .fa-music{
+    display: flex;
+    margin-right: 1.3rem;
+ 
+ }
+ header .menu_side .menu_song{
+    width: 100%;
+    height: 300px;
+    /* border: 1px solid white; */
+    margin-top: 40px;
+ }
+ 
+ header .menu_side .menu_song li{
+    list-style-type: none;
+    position: relative;
+    padding: 5px 0px 5px 20px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: .3s linear ;
+ }
+ header .menu_side .menu_song li:hover{
+    background: rgb(105, 105, 170,.1);
+ }
+ 
+ header .menu_side .menu_song li span{
+    font-size: 0.75rem;
+    font-weight: 600;
+    color:#4c5262 ;
+ }
+ header .menu_side .menu_song li img{
+width: 2rem;
+height: 2rem;
+margin-left: 1.5rem;
+ }
+ header .menu_side .menu_song li h5{
+font-size: 0.7rem;
+margin-left:0.8rem ;
+ }
+ header .menu_side .menu_song li h5 .subtitle{
+font-size: 0.6rem;
+color: #4c5262;
+ }
+ header .menu_side .menu_song li .fa-circle-play{
+    
+    position: absolute;
+    right: 15px;
+    top: 12px;
+    font-size: 1rem;
+ }
+
+   
+header .master_play{
+    display: flex;
+    align-items: center;
+    padding: 0px 20px;
+}
+header .master_play .wave{
+    width:1.8rem;
+    height: 1.8rem;
+    /* border: 1px solid #fff ; */
+    padding-bottom: 5px;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 10px;
+}
+header .master_play .wave .wave1{
+    width: 0.2rem;
+    height: 0.6rem;
+    margin-right: 3px;
+    border-radius: 10px 10px 0 0;
+    background: #36e2ec;
+    animation: unset;
+}
+header .master_play .wave .wave1:nth-child(2){
+    height: 0.8rem;
+    /* animation-delay: .4s; */
+
+}
+header .master_play .wave .wave1:nth-child(3){
+    height: 0.5rem;
+    /* animation-delay: .8s; */
+
+}
+/* javascript class wave */
+header .master_play .active2 .wave1{
+
+    animation: wave 2s linear infinite;
+}
+header .master_play .active2 .wave1:nth-child(2){
+    animation-delay: .4s;
+
+}
+header .master_play .active2 .wave1:nth-child(3){
+    animation-delay: .8s;
+
+}
+@keyframes wave{
+    0%{
+        height: 10px;
+    }
+    50%{
+        height: 15px;
+    }
+    100%{
+        height: 10px;
+    }
+}
+
+header .master_play img{
+    width:2rem ;
+    height: 2rem;
+}
