--- a/style.css
+++ b/style.css
@@ -10,12 +10,15 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 header{
-    width: 85%;
-    height: 95%;
-    border: 1px solid white;
+    width: 100%;
+    height: 100%;
+    /* border: 1px solid white; */
     display: flex;
     flex-wrap: wrap;
-    /* overflow: hidden; */
+    overflow: hidden;
+}
+body::-webkit-scrollbar{
+    display: none;
 }
 header .menu_side, .song_side{
     /* position: relative; */
@@ -164,6 +167,7 @@ header .master_play .wave{
     display: flex;
     align-items: flex-end;
     margin-right: 10px;
+
 }
 header .master_play .wave .wave1{
     width: 0.2rem;
@@ -212,3 +216,457 @@ header .master_play img{
     width:2rem ;
     height: 2rem;
 }
+header .master_play h5{
+    width:9rem;
+    color: white;
+    font-size:0.8rem;
+    margin-left: 1rem;
+    line-height: 1rem;
+}
+header .master_play h5 .subtitle{
+    color: #4c5262;
+    font-size:0.7rem;
+}
+header .master_play .icon{
+    font-size: 1.25rem;
+    color: white;
+    margin: 0px 3rem 0px 40px;
+    display: flex;
+}
+header .master_play .icon .bi{
+    cursor: pointer;
+    outline: none;
+}
+header .master_play .icon .bi:nth-child(2){
+border: 1px solid rgb(185, 185, 170,.1);
+border-radius: 50%;
+padding: 1px 3px 0px 6px;
+margin: 0px 5px;
+transition: .3s linear;
+
+}
+header .master_play span {
+    color: white;
+    width: 2rem;
+    font-size: 0.6rem;
+    font-weight: 400;
+}
+
+header .master_play span #currentStat{
+
+margin: 0  0 0 1.25rem;
+
+}
+
+header .master_play .bar{
+    position: relative;
+    width: 43%;
+    height: 0.1rem;
+    margin: 0 1rem 0 0.6rem;
+}
+header .master_play .bar .bar2{
+    position: absolute;
+    width: 0%;
+    height: 100%;
+  top: 0;
+  background-color:#36e2ec ;
+  
+}
+header .master_play .bar .dot{
+    position: absolute;
+    width: 0.3rem;
+
+    height: 0.3rem;
+    background-color:#36e2ec ;
+    border-radius: 50%;
+    left: 0%;
+    top: -1px;
+    transition: 1s linear;
+}
+header .master_play .bar .dot::before{
+    content: '';
+    position: absolute;
+    width: 0.95rem;
+
+    height: 0.95rem;
+  border: 1px solid #36e2ec;
+    border-radius: 50%;
+    left: -6px;
+    top: -6px;
+        box-shadow: inset 0 0 3px #36e2ec;
+}
+
+header .master_play .bar input{
+    position: absolute;
+    width: 100%;
+    top: -6px;
+    left: 0;
+    cursor: pointer;
+    z-index: 5;
+    transition: 3s linear;
+    opacity: 0;
+
+
+}
+
+header .master_play .vol{
+    position:relative;
+    width: 11.6rem;
+    height: 2px;
+    margin-left: 10em;
+    background-color: rgb(105, 105, 17,.1);
+    transition: 3s linear;
+
+
+}
+
+header .master_play .vol .bi{
+position: absolute;
+color: white;
+font-size: 1.5rem;
+top: -17px;
+left: -30px;
+
+
+
+}
+
+header .master_play .vol input{
+    position: absolute;
+    width: 100%;
+    top: -10px;
+    left: 0;
+    cursor: pointer;
+    z-index: 5;
+    transition: 3s linear;
+    opacity: 0;
+
+
+}
+
+header .master_play .bar{
+    position: relative;
+    width: 43%;
+    height: 0.1rem;
+    margin: 0 1rem 0 0.6rem;
+}
+header .master_play .vol .vol_bar{
+    position: absolute;
+    width: 0%;
+    height: 100%;
+  top: 0;
+  background-color:#36e2ec ;
+  
+}
+header .master_play .vol .dot{
+    position: absolute;
+    width: 0.3rem;
+
+    height: 0.3rem;
+    background-color:#36e2ec ;
+    border-radius: 50%;
+    left: 0%;
+    top: -1px;
+    transition: 1s linear;
+}
+header .master_play .vol .dot::before{
+    content: '';
+    position: absolute;
+    width: 0.95rem;
+
+    height: 0.95rem;
+  border: 1px solid #36e2ec;
+    border-radius: 50%;
+    left: -6px;
+    top: -6px;
+        box-shadow: inset 0 0 3px #36e2ec;
+}
+
+header .song_side{
+    z-index:2;
+}
+header .song_side::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 15.75rem;
+    background: url(img/bg.png);
+    z-index: -1;
+    /* background-size: cover; */
+    background-repeat: no-repeat;
+    background-position: 179px 4px;
+
+    
+    
+    }
+header .song_side nav{
+    width: 90%;
+    height: 10%;
+    margin: auto;
+    /* border: 1px solid white; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+header .song_side nav ul{
+display: flex;
+
+}
+header .song_side nav ul li{
+position:relative;
+list-style-type: none;
+color: #4c5262;
+font-size: 0.8rem;
+margin-right:1.5rem;
+cursor: pointer;
+transition: .3s linear;
+}
+header .song_side nav ul li:hover{
+color: #fff;
+}
+header .song_side nav ul li:nth-child(1){
+color: #fff;
+}
+header .song_side nav ul li span{
+position: absolute;
+width: 100%;
+height:2.5px;
+background: #36e2ec;
+bottom: -5px;
+left: 0;
+border-radius: 20px;
+
+}
+header .song_side nav .search{
+position: relative;
+width: 40%;
+padding: 1px 10px;
+border-radius: 20px;
+color: gray;
+}
+header .song_side nav .search::before{
+position:absolute;
+content: '';
+width: 100%;
+height: 100%;
+border-radius: 20px;
+background-color: rgb(184, 184, 184,.1);
+z-index: -1;
+backdrop-filter: blur(5px);
+}
+header .song_side nav .search .bi{
+font-size: 13px;
+padding: 3px 0 0 10px;
+}
+header .song_side nav .search input{
+    background: none;
+    outline: none;
+    border: none;
+    padding: 0 10px;
+    color: white;
+    font-size: 12px;
+}
+header .song_side nav .user{
+position: relative;
+width: 1.9rem;
+height: 1.9rem;
+border-radius: 50%;
+cursor: pointer;
+}
+header .song_side nav .user img{
+position: absolute;
+width: 1.9rem;
+height: 1.9rem;
+border-radius: 50%;
+/* box-shadow: 2px 2px 8px #131312; */
+}
+
+header .song_side .content{
+    width: 90%;
+    height: 30%;
+    margin: auto;
+    /* border:1px solid white; */
+    padding-top: 20px;
+}
+header .song_side .content h1{
+ font-size: 1.6rem;
+ font-weight: 600;
+}
+header .song_side .content p{
+ font-size: .7rem;
+ font-weight: 400;
+ color: #4c5262;
+ margin: 5px;
+}
+header .song_side .content .buttons{
+margin-top: 15px;
+}
+header .song_side .content .buttons button{
+width: 8.1rem;
+height: 1.6rem;
+border: 2px solid #36e2ec;
+outline: none;
+border-radius: 1.3rem;
+background: #5adae0;
+color: white;
+cursor: pointer;
+transition: .3s linear;
+}
+header .song_side .content .buttons button:hover{
+border: 2px solid #36e2ec;
+background: none;
+color: #36e2ec;
+
+}
+header .song_side .content .buttons button:nth-child(2){
+border: 2px solid #36e2ec;
+background: none;
+color: #36e2ec;
+
+}
+header .song_side .content .buttons button:nth-child(2):hover{
+border: 2px solid #36e2ec;
+background: #36e2ec;
+color: white;
+
+}
+header .song_side .popular_song{
+  width: 90%;
+  height: auto;
+  /* border: 1px solid white; */
+  margin: auto;
+margin-top: 1rem;
+}
+header .song_side .popular_song .h4{
+display:flex ;
+align-items: center;
+justify-content: space-between;
+}
+header .song_side .popular_song .h4 .bi{
+ color:#a4a8b4 ;
+ cursor: pointer;
+ transition: .3s linear;
+
+}
+header .song_side .popular_song .h4 .bi:hover{
+ color:white ;
+
+}
+header .song_side .popular_song .pop_song{
+ width: 100%;
+ height:9.3rem ;
+ margin-top: 15px;
+ display: flex;
+ overflow-x: auto;
+ scroll-behavior: smooth;
+}
+header .song_side .popular_song .pop_song::-webkit-scrollbar{
+display: none;
+}
+header .song_side .popular_song .pop_song li{
+min-width:6.25rem;
+height: 8.75rem;
+list-style-type:none;
+margin-right: 1.5rem;
+transition: .3s linear;
+}
+header .song_side .popular_song .pop_song li:hover{
+/* background-color: rgb(185, 105, 170,.1); */
+}
+header .song_side .popular_song .pop_song li .img_play{
+position: relative;
+height: 7rem;
+width: 7rem;
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+header .song_side .popular_song .pop_song li .img_play img{
+width: 100%;
+height: 100%;
+
+}
+header .song_side .popular_song .pop_song li .img_play .bi{
+position: absolute;
+font-size: 1.27rem;
+cursor: pointer;
+transition: .3s linear;
+opacity: 0;
+}
+header .song_side .popular_song .pop_song li .img_play:hover .bi{
+opacity: 1;
+}
+header .song_side .popular_song .pop_song li h5{
+padding: 5px 0px 0px 5px;
+line-height: 1rem;
+font-size: 0.6.1rem;
+
+}
+header .song_side .popular_song .pop_song li h5 .subtitle{
+font-size: 0.5rem;
+color: #4c5262;
+}
+header .song_side .popular_artists{
+    width: 90%;
+    height: auto;
+    /* border: 1px solid white; */
+    margin: auto;
+  margin-top: 3rem;
+  }
+  header .song_side .popular_artists .h4{
+  display:flex ;
+  align-items: center;
+  justify-content: space-between;
+  }
+  header .song_side .popular_artists .h4 .bi{
+   color:#a4a8b4 ;
+   cursor: pointer;
+   transition: .3s linear;
+  
+  }
+  header .song_side .popular_artists .h4 .bi:hover{
+  color:white ;
+  
+  } 
+  header .song_side .popular_artists .item{
+width: 100%;
+height: auto;
+  margin-top: 10px;
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  }
+  
+  
+header .song_side .popular_artists .item::-webkit-scrollbar{
+   display: none;
+}  
+
+header .song_side .popular_artists .item li{
+list-style-type: none;
+position: relative;
+min-width:3.9rem;
+height: 3.9rem;
+background-color: white;
+border-radius: 50%;
+margin-right: 20px;
+cursor: pointer;
+
+} 
+  header .song_side .popular_artists .item li img{
+width: 100%;
+height: 100%;
+border-radius: 50%;
+position:absolute;
+
+
+} 
+
+
+
+
+
+
+
