--- a/style.css
+++ b/style.css
@@ -678,7 +678,7 @@ position:absolute;
     font-size: 1rem;
 }
 
-@media screen and (max-width:600px){
+@media (max-width:600px){
     .menu_side{
         display: none;
     }
